--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
-numpy>=1.20.0
-pandas>=1.3.0
-matplotlib>=3.4.0
-scikit-learn>=0.24.0
+# 超神系统 - 中国市场分析模块
+# 依赖项列表
+
+# 基础依赖
+PyQt5>=5.15.0
+numpy>=1.19.0
+pandas>=1.1.0
 requests>=2.25.0
+
+# 数据处理
+matplotlib>=3.3.0
+scikit-learn>=0.24.0
+
+# 系统工具
+psutil>=5.8.0
+python-dateutil>=2.8.1
+pytz>=2021.1
+
+# 日志和调试
+colorlog>=6.6.0
+tqdm>=4.62.0
+
 joblib>=1.0.0
-tqdm>=4.60.0
 plotly>=5.0.0
 akshare>=1.0.0
 statsmodels>=0.12.0
 beautifulsoup4>=4.9.0
 lxml>=4.6.0
-python-dateutil>=2.8.0
-pytz>=2021.1
-colorlog>=6.0.0
 jsonschema>=3.2.0
 PyYAML>=6.0
 SQLAlchemy>=1.4.0 
